sumo/tests/dfrouter/errors/no_detector_files/options.dfrouter
--net-file=input_messstrecke.net.xml
